syntax = "proto3";

option go_package = "./;pb";

message User {
    int32 ID        = 1;
    string Username = 2;
    string Email    = 3;
    string Password = 4;
	string Type     = 5;
	string Expires  = 6;
}

message CreateUserRequest {
    string Username = 1;
    string Email    = 2;
    string Password = 3;
}

message CreateUserResponse {
    int32 ID = 1;
}

message GenerateTokenRequest{
    string Email    = 1;
    string Password = 2 ;
}


message GenerateTokenResponse{
    string ID = 1;
}

message ParseTokenRequest {
    string token = 1;
}
message ParseTokenResponse {
    int32 ID = 1;
}

message GetDetailsRequest {
    int32 ID = 1;
}

message UpdateAccountResponse {

}