syntax = "proto3";

option go_package = "./;pb";

import "message.proto";

service AuthService {
    rpc createUser(CreateUserRequest) returns (CreateUserResponse) {};
    rpc generateToken(GenerateTokenRequest) returns (GenerateTokenResponse) {};
    rpc parseToken(ParseTokenRequest) returns (ParseTokenResponse) {};
    rpc getDetails(GetDetailsRequest) returns (User) {};
    rpc update(UpdateRequest) returns (UpdateResponse) {};
}
